--- a/index.html
+++ b/index.html
@@ -12,11 +12,21 @@
 </head>
 <body>
 	<div class="flex flex-row">
-		<h1 class="w-3/4 text-3xl font-bold">MegaMart</h1>
-		<div class="w-1/4 flex flex-row-reverse text-blue-500">
+		<h1 class="w-4/6 text-3xl font-bold">MegaMart</h1>
+		<div class="w-1/6 flex flex-row-reverse text-blue-500">
 			<div class="flex flex-col">
 				<div>Cart</div>
-				<div id="cart-total">0</div>
+				<div class="flex flex-row">
+					$<div id="cart-total">0</div>
+				</div>
+			</div>
+		</div>
+		<div class="w-1/6 flex flex-row-reverse text-blue-500">
+			<div class="flex flex-col">
+				<div>Tax</div>
+				<div class="flex flex-row">
+					$<div id="cart-tax">0</div>
+				</div>
 			</div>
 		</div>
 	</div>
