--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<style>
 	</style>
 	<script src="./js/default.js"></script>
-	<script src="./js/4_060.js"></script>
+	<script src="./js/megamart.js"></script>
 </head>
 <body>
 	<div class="flex flex-row">
