--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>MegaMart</title>
+	<link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
 	<script src="https://cdn.tailwindcss.com"></script>
 	<style>
 	</style>
@@ -13,25 +14,25 @@
 <body>
 	<div class="flex flex-row">
 		<h1 class="w-4/6 text-3xl font-bold">MegaMart</h1>
-		<div class="w-1/6 flex flex-row-reverse text-blue-500">
-			<div class="flex flex-col">
-				<div>Cart</div>
-				<div class="flex flex-row">
-					$<div id="cart-total">0</div>
+		<div class="w-2/6 flex flex-row-reverse text-blue-500">
+			<div class="stats">
+				<div class="stat">
+					<div class="stat-title">Cart</div>
+					<div class="stat-value" id="cart-total">$0</div>
 				</div>
-			</div>
-		</div>
-		<div class="w-1/6 flex flex-row-reverse text-blue-500">
-			<div class="flex flex-col">
-				<div>Tax</div>
-				<div class="flex flex-row">
-					$<div id="cart-tax">0</div>
+				<div class="stat">
+					<div class="stat-title">Tax</div>
+					<div class="stat-value" id="cart-tax">$0</div>
 				</div>
 			</div>
 		</div>
 	</div>
 
 	<div class="flex flex-row" id="list">
+	</div>
+
+	<h1 class="w-4/6 text-3xl font-bold mt-10">장바구니</h1>
+	<div class="grid grid-cols-4 gap-4" id="cart">
 	</div>
 </body>
 </html>
